--- a/src/app/manage-employee/manage-employee.component.css
+++ b/src/app/manage-employee/manage-employee.component.css
@@ -6,10 +6,10 @@
 
 .form-section {
     width: 30%;
-    background-color: beige;
+    background-color: white;
 }
 
 .render-section {
     width: 70%;
-    background-color: rgb(105, 147, 88);
+    background-color: #ebf9ec;
 }
