--- a/src/app/manage-employee/manage-employee.component.html
+++ b/src/app/manage-employee/manage-employee.component.html
@@ -1,7 +1,14 @@
 <section class="manage-section">
     <section class="form-section">
         <form>
-            ##formsection--manage employee##
+            <div class="form-floating">
+                <input type="email" id="floatingInput" placeholder=" " required>
+                <label for="floatingInput">Name</label>
+            </div>
+            <div class="form-floating">
+                <input type="email" id="floatingInput" placeholder=" " required>
+                <label for="floatingInput">Email address</label>
+            </div>
         </form>
     </section>
     
