--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,3 +1,18 @@
 <section class="overview-section">
-    ##overview-section##
+    <h1>Overview</h1>
+    <p>Infrrd is an award-winning AI firm focused on applying machine learning to improving business processes. The
+        company’s platform employs next-generation AI capabilities to help enterprises transform their businesses.
+        Proprietary technology removes bottlenecks caused by manual data entry and unlocks data from complex documents
+        to power digitization.</p>
+    <p>Infrrd’s unique ML-first approach can automatically extract data from documents with complex visual elements,
+        surpassing OCR’s performance limitations to help you maximize straight-through processing.</p>
+    <p>With over a decade of industry experience, Infrrd draws talent from around the globe and builds close-knit teams
+        driven to help enterprises worldwide gain competitive advantages and better serve their customers. It’s
+        constantly innovating via Infrrd Research Labs, which explores cutting-edge solutions and tackles the industry’s
+        toughest challenges.</p>
+    <p>Infrrd is committed to making the impossible possible, and guarantees its accuracy, increasing extraction
+        efficiency to give customers a worry-free innovation experience. The company has been recognized for its role in
+        providing a strong work-life balance and has also won awards for Best CEOs for Women and Best CEOs for
+        Diversity.
+    </p>
 </section>
