--- a/src/app/search-employee/search-employee.component.html
+++ b/src/app/search-employee/search-employee.component.html
@@ -1,10 +1,37 @@
 <section class="manage-section">
     <section class="form-section">
-        <form>
-            ##formsection--search employee##
+        <form style="width:100%">
+            <div class="dropdown-container-search" style="width:100%">
+                <label class="label-css">Department</label>
+                <button class="dropdown-button btn-search" id="teamDropdown" style="width:100%">
+                    Choose Team <i class="bi bi-chevron-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Product Team</a>
+                    <a href="#">IDC</a>
+                    <a href="#">OCBC</a>
+                    <a href="#">Radian</a>
+                    <a href="#">Rustify</a>
+                </div>
+            </div>
+
+            <div class="dropdown-container-search" style="width:100%">
+                <label class="label-css">Role Type</label>
+                <button class="dropdown-button btn-search" id="teamDropdown" style="width:100%">
+                    Full Time <i class="bi bi-chevron-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Product Team</a>
+                    <a href="#">IDC</a>
+                    <a href="#">OCBC</a>
+                    <a href="#">Radian</a>
+                    <a href="#">Rustify</a>
+                </div>
+            </div>
         </form>
+        
     </section>
-    
+
     <section class="render-section">
         ##render##
     </section>
