--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -28,6 +28,6 @@
 .side-menu-item .active {
     color: green;
     /* Example background color */
-    background-color: rgb(89, 150, 83);
+    background-color: #e8f9e9;
     /* Example text color */
 }
