--- a/src/app/main-section/main-section.component.css
+++ b/src/app/main-section/main-section.component.css
@@ -11,3 +11,62 @@
     align-items: baseline;
     gap: 20px;
 }
+
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.dropdown-label {
+    font-weight: bold;
+    margin-bottom: 8px;
+    display: block;
+}
+
+.dropdown-button {
+    height: 100%;
+    align-items: baseline;
+    gap: 8px;
+    background-color: white;
+    color: black;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 2px solid #dedcdcf2;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.dropdown-button i {
+    margin-right: 8px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 193px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-container:hover .dropdown-content {
+    display: block;
+}
