--- a/src/app/search-employee/search-employee.component.css
+++ b/src/app/search-employee/search-employee.component.css
@@ -4,12 +4,91 @@
     height: 88.4vh;
 }
 
+.label-css{
+    margin-left: 15px;
+}
+
 .form-section {
     width: 30%;
-    background-color: beige;
+    background-color: white;
 }
 
 .render-section {
     width: 70%;
     background-color: rgb(105, 147, 88);
+}
+
+.label-css {
+    display: block;
+    padding-bottom:4px;
+}
+
+.dropdown-container-search {
+    /* Updated class name */
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    border-top: 2px solid #f2f2f2f2;
+    padding: 1rem 0;
+}
+
+.dropdown-label {
+    font-weight: bold;
+    margin-bottom: 8px;
+    display: block;
+}
+
+.dropdown-button {
+    height: 100%;
+    align-items: baseline;
+    gap: 8px;
+    background-color: white;
+    color: black;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 2px solid #dedcdcf2;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.dropdown-button i {
+    margin-right: 8px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 400px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-container-search:hover .dropdown-content {
+    /* Updated class name */
+    display: block;
+}
+
+.btn-search {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border: none !important;
 }
