--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,15 +1,17 @@
 <section class="my-account-section">
     <div class="card">
         <div class="card-title" style="padding:0 1rem 0 1rem">
-            <div class="pro-img">
-                img
+            <div class="pro-details">
+                <div class="pro-img">
+                    <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
+                </div>
+                <div>
+                    <p>Arpitha A Gaekwad</p>
+                    <p>Senior Frontend Developer</p>
+                </div>
             </div>
             <div>
-                <p>Arpitha A Gaekwad</p>
-                <p>Senior Frontend Developer</p>
-            </div>
-            <div>
-                <i class="bi bi-telegram" style="font-size: 2.5rem;"></i>
+                <i class="bi bi-telegram icon-green" style="font-size: 2.5rem;"></i>
             </div>
         </div>
         <div class="card-body">
@@ -33,8 +35,8 @@
                 <div>Reporting Manager : Sona.Job</div>
             </div>
             <div class="item-align-flex-container details-css border-profile-card">
-                <div><i class="bi bi-telephone-fill"></i> 9448179713</div>
-                <div><i class="bi bi-envelope-fill"></i> arpithagkwdgmail.com</div>
+                <div><i class="bi bi-telephone-fill icon-blue"></i> 9448179713</div>
+                <div><i class="bi bi-envelope-fill icon-red"></i> arpithagkwdgmail.com</div>
             </div>            
         </div>
     </div>
