--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0 !important;
     padding: 0 !important;
     font-family: Arial, sans-serif;
+    font-size: 12px !important;
 }
 
 form {
@@ -60,4 +61,71 @@ form {
     border-color: #80bdff;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
     background-color: #fff;
+}
+
+.pro-details {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+}
+
+.card {
+    height: auto;
+    width: 335px;
+    background-color: white;
+    border: 1px solid #D3D3D3;
+    border-radius: 9px;
+    color: black;
+}
+
+.card-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.item-align-flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.item-align-flex-rating {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.border-profile-card {
+    border-top: 1px solid #D3D3D3;
+}
+
+.details-css {
+    padding: 1rem 1rem 0 1rem;
+    height: 2rem;
+}
+
+.star-container {
+    display: flex;
+    gap: 7px;
+    margin-top: 18px;
+}
+
+.icon-red {
+    color: red;
+}
+
+.icon-blue {
+    color: blue;
+}
+
+.icon-green {
+    color: #12a779;
 }
