--- a/src/app/manage-employee/manage-employee.component.css
+++ b/src/app/manage-employee/manage-employee.component.css
@@ -1,20 +1,39 @@
 .manage-section {
     display: flex;
     flex-direction: row;
-    height: 88.4vh;
+    height: 91.4vh;
 }
 
 .form-section {
-    width: 20%;
+    width: 25%;
     background-color: white;
 }
 
 .render-section {
-    width: 80%;
-    padding:1rem;
+    width: 75%;
+    padding: 1rem;
+    height: 100vh - 3rem;
     background-color: #ebf9ec;
     display: flex;
-    gap: 12px;
+    justify-content: space-around;
     flex-wrap: wrap;
     flex-grow: 1.5;
 }
+
+.add-employee-btn {
+    width: 16rem;
+    padding: 0.6rem;
+    margin-left: 5px;
+    border: 2px solid green;
+    border-radius: 5px;
+    background-color: green;
+    color: white;
+    font-weight: 600;
+}
+
+.form-button {
+    position: fixed;
+    bottom: 10px;
+    left: 12rem;
+}
+
