--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,6 +1,6 @@
 <section class="my-account-section">
     <div class="card">
-        <div class="card-title" style="padding:0 1rem 0 1rem">
+        <div class="card-title" style="padding:0 1rem 0 1rem;margin-top:5px">
             <div class="pro-details">
                 <div class="pro-img">
                     <i class="bi bi-person-circle" style="font-size: 2.5rem;"></i>
@@ -35,9 +35,9 @@
                 <div>Reporting Manager : Sona.Job</div>
             </div>
             <div class="item-align-flex-container details-css border-profile-card">
-                <div><i class="bi bi-telephone-fill icon-blue"></i> 9448179713</div>
-                <div><i class="bi bi-envelope-fill icon-red"></i> arpithagkwdgmail.com</div>
-            </div>            
+                <div><i class="bi bi-telephone-fill icon-blue"></i>&nbsp;9448179713</div>
+                <div><i class="bi bi-envelope-fill icon-red"></i>&nbsp;arpithagkwdgmail.com</div>
+            </div>
         </div>
     </div>
 </section>
