--- a/src/app/search-employee/search-employee.component.css
+++ b/src/app/search-employee/search-employee.component.css
@@ -1,46 +1,94 @@
 .manage-section {
     display: flex;
     flex-direction: row;
-    height: 88.4vh;
+    height: 91.4vh;
 }
 
-.label-css{
+.label-css {
     margin-left: 15px;
 }
 
 .form-section {
-    width: 20%;
+    width: 25%;
     background-color: white;
 }
 
 .render-section {
-    width: 80%;
-    padding:1rem;
+    width: 75%;
+    padding: 1rem;
+    height: 100vh - 3rem;
     background-color: #ebf9ec;
     display: flex;
-    gap: 12px;
+    justify-content: space-around;
     flex-wrap: wrap;
     flex-grow: 1.5;
 }
 
+.clear-btn {
+    width: 7rem;
+    padding: 0.6rem;
+    border: 2px solid green;
+    border-radius: 5px;
+    background-color: white;
+    color: green;
+    font-weight: 600;
+}
+
+.submit-btn {
+    width: 7rem;
+    padding: 0.6rem;
+    margin-left: 5px;
+    border: 2px solid green;
+    border-radius: 5px;
+    background-color: green;
+    color: white;
+    font-weight: 600;
+}
+
+.search-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.form-button {
+    position: fixed;
+    bottom: 10px;
+    left: 13.2rem;
+}
+
 .label-css {
     display: block;
-    padding-bottom:4px;
+    padding-bottom: 10px;
+}
+
+.input-css {
+    width: 87% !important;
+    border: none !important;
+    font-size: 12px;
+    outline: none;
+}
+
+.input-css:focus {
+    border: none !important;
+    outline: none;
 }
 
 .dropdown-container-search {
-    /* Updated class name */
     position: relative;
     display: inline-block;
+    height: 0rem;
+    padding-top: 8px;
     width: 100%;
     border-top: 2px solid #f2f2f2f2;
-    padding: 1rem 0;
 }
 
 .dropdown-label {
     font-weight: bold;
-    margin-bottom: 8px;
+    margin-bottom: 3px;
+    margin-left: 15px;
     display: block;
+    font-size: 10px;
 }
 
 .dropdown-button {
@@ -50,7 +98,7 @@
     background-color: white;
     color: black;
     padding: 10px 15px;
-    font-size: 16px;
+    font-size: 12px;
     border: 2px solid #dedcdcf2;
     cursor: pointer;
     display: flex;
@@ -67,14 +115,14 @@
     display: none;
     position: absolute;
     background-color: white;
-    min-width: 266px;
+    min-width: 21.9rem;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     border-radius: 5px;
     overflow: hidden;
 }
 
-.dropdown-content a {
+.dropdown-content div {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -82,7 +130,7 @@
     transition: background-color 0.3s;
 }
 
-.dropdown-content a:hover {
+.dropdown-content div:hover {
     background-color: #f1f1f1;
 }
 
