--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,22 @@ body {
     padding: 0 !important;
     font-family: Arial, sans-serif;
     font-size: 12px !important;
+    background-color: white !important;
+}
+
+/* Hide scrollbar while allowing scrolling */
+html,
+body {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
 }
 
 form {
@@ -14,17 +30,17 @@ form {
 .form-floating {
     width: 99% !important;
     position: relative;
-    margin-bottom: 1rem;
+    margin-bottom: 0.6rem;
 }
 
 .form-floating input {
     width: 100%;
-    padding: 0.75rem 0.75rem 0.75rem 0.75rem;
-    font-size: 1rem;
+    padding: 0.75rem 0.75rem 0.9rem 0.75rem;
+    font-size: 0.7rem;
     line-height: 1.25;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    height: 4rem;
+    height: 2rem;
     box-sizing: border-box;
 }
 
@@ -38,7 +54,7 @@ form {
     pointer-events: none;
     transform: translateY(-50%);
     transition: all 0.1s ease-in-out;
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
 
 .form-floating input:focus,
@@ -51,7 +67,7 @@ form {
 .form-floating input:not(:placeholder-shown)+label {
     top: 0;
     left: 0.75rem;
-    font-size: 0.85rem;
+    font-size: 0.6rem;
     color: #495057;
     transform: translateY(-50%);
 }
@@ -72,11 +88,13 @@ form {
 
 .card {
     height: auto;
-    width: 335px;
+    width: 254px;
+    font-size: 10px;
     background-color: white;
     border: 1px solid #D3D3D3;
     border-radius: 9px;
     color: black;
+    margin-bottom: 10px;
 }
 
 .card-title {
