--- a/src/app/manage-employee/manage-employee.component.css
+++ b/src/app/manage-employee/manage-employee.component.css
@@ -37,3 +37,28 @@
     left: 12rem;
 }
 
+.is-invalid {
+    border-color: #dc3545;
+}
+
+.invalid-feedback {
+    display: block;
+    color: #dc3545;
+}
+
+.actions-control {
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
+    gap: 20px;
+    justify-content: center;
+    padding-bottom: 4px;
+}
+
+.icon-orangered {
+    color: orangered;
+}
+
+.icon-edit {
+    color: rgba(159, 159, 57, 0.717);
+}
